Show/Hide fix Change Password
Show change password would overlap with sign out. Fixed this issue with
an added margin on show change password.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -36,6 +36,7 @@ h4 {
   font-size: 20px;
   display: none;
   border: none;
+  margin-top: 40px;
   background-color: #AFF3F6;
 }
 
